src/wasm-lib/kcl/tests/import_file_parse_error/execution_error.snap
---
source: kcl/src/simulation_tests.rs
description: Error from executing import_file_parse_error.kcl
---
KCL Syntax error

  × syntax: Unexpected token: }
   ╭─[3:1]
 2 │   return 
 3 │ }
   · ┬
   · ╰── tests/import_file_parse_error/parse-failure.kcl
   ╰────
